--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "Мій перший проект",
     "main": "script.js",
     "scripts": {
-      "start": "npm run build"
+        "build": "npm run build"
     },
     "dependencies": {}
-  }
-  
+}
